cargo-features = ["edition2021"]

[package]
name = "xplane-datamonitor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xplm = "0.3.1"
anyhow = "1.0.42"
thiserror = "1.0.26"

[profile.release]
lto = true