cargo-features = ["edition2021","strip"]

[package]
name = "xplane-datamonitor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xplm = "0.3.1"
anyhow = "1.0.42"
thiserror = "1.0.26"
influxdb-client = "0.1.4"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
strip = true
panic = 'abort'